web/src/app/components/admin-dashboard/shared/chatbutton/chatbutton.component.scss
// Summary Chat Container
.summary_chat_container {
  background-color: #164d61;
  padding: 0.5rem;
  position: absolute;
  right: 0px;
  top: 0px;
  // z-index: -1;
  width: 27%;
  height: 85vh;
  padding: 1.2rem;
  min-width: 350px;
}
.message_container {
  overflow-y: auto;
  max-height: 65vh;
}
.incoming_msg {
  display: flex;
  width: 100%;

  margin-right: 1rem;
}
.messge_right {
  width: fit-content;
  background-color: #e1e6ed;
  padding: 0.6875rem 0.5rem 0.5rem 0.5rem;

  color: #000000;
  font-size: 0.8rem;
  line-height: 0.8rem;

  border-radius: 0.5rem;
  float: left;
  clear: both;
  font-family: "Rubik";
  position: relative;
  min-width: 150px;
  max-width: 250px;

   white-space: pre-wrap; /* Preserves whitespace and line breaks */
  word-wrap: break-word;
  overflow-wrap: break-word;
  overflow: visible;
  text-overflow: initial;

  display: inline-block;
  margin-bottom: 8px;
  height: auto;
}
.messge_right p {
  margin-bottom: 0.5rem !important;
}

.callouts {
  list-style-type: none;
}

li + li {
  margin-left: 3.3333%;
}

/* BASE STYLES FOR EACH */
.callouts li {
  display: inline-block;
  /* Real styles */
  position: relative;
  width: 22%;
  height: 6.25rem;
  padding: 1rem;
  background-color: #fff;
  border: 1px solid #c1c1c1;
  border-radius: 0.25rem;
  box-shadow: 0 0 10px #c1c1c1;
}


.outgoing_msg {
  margin-left: 1rem;
}
.messge_left p {
  margin-bottom: 0.5rem;
}
.messge_left {
  padding: 0.6875rem 0.5rem 0.5rem 0.5rem;
  background-color: #cff4f5;
  border-radius: 0.5rem 0.5rem 0.5rem 0.5rem;
  color: #164d61;
  font-size: 0.8rem;
  line-height: 0.8rem;
  width: fit-content;
  float: right;
  clear: both;
  position: relative;
  font-family: "Rubik";
  min-width: 120px;
  max-width: 250px;


  /* These properties preserve whitespace */
  white-space: pre-wrap; /* Preserves whitespace and line breaks */
  word-wrap: break-word;
  overflow-wrap: break-word;
  overflow: visible;
  text-overflow: initial;

  display: inline-block;
  margin-bottom: 8px;
  height: auto;
}
// new updates
.chat-container {
  position: absolute;
  bottom: 0px;
  padding: 1rem;
  width: 90%;
  display: flex;
}

.chat_panel_upper {
  display: flex;
  width: 100%;
  justify-content: space-between;
}

.chat_list_item {
  background-color: #e1e6ed;
  border-radius: 0.4rem;
  padding: 0.2rem;
  color: #164d61;
  font-family: "Rubik";
  font-size: 0.8rem;
  margin-bottom: 0.3rem;
}
.loader {
  position: absolute;
  top: 40%;
  left: 50%;
}
.visually-hidden {
  visibility: hidden;
}
.isDisabled {
  pointer-events: none;
  background-color: #164d61;
  opacity: 30%;
}
.send-block {
  position: absolute;
  bottom: 0.4rem;
  min-height: 2rem;
  display: flex;
  width: 92%;
  align-items: center;
}
.user-message-bg {
  padding: 0.4rem;
  display: flex;
  flex-direction: column;
}
.chat-area {
  height: 95%;
}

.chat-date {
  width: 100%;
  color: #c1c1c1;
  font-size: 0.8rem;
  display: flex;
  justify-content: center;
}
.chatTypearea {
  background-color: #d8dce5;
  height: 70%;
  width: 80%;
  color: #164d61;
  padding: 0.2rem;
  font-family: "Rubik";
  border-radius: 0.4rem;
  min-height: 70px;
  max-height: 70px;
  overflow-y: auto;
}
.chaticon {
  width: 1.25rem;
  height: 1.25rem;
}
.chaticonpanel {
  width: 1.75rem;
  height: 1.75rem;
  background-color: #edeff5;
  border-radius: 50%;
  display: flex;
  justify-content: center;
  align-items: center;
}
.Summary-Chat-title {
  padding-left: 1.5rem;
  font-size: 1.5rem;
  line-height: 1.875rem;
  color: #ffffff;
  font-weight: 600;
  width: 100%;
  display: flex;
  justify-content: space-between;
}
.callIcon {
  width: 1.25rem;
  height: 1.25rem;

  filter: brightness(0) saturate(100%) invert(23%) sepia(58%) saturate(592%)
    hue-rotate(150deg) brightness(91%) contrast(92%);
}
.callIcon:hover {
  background: url("../../../../../assets/04-Icons/Icons_Send\ A.svg") no-repeat;
  filter: brightness(0) saturate(100%) invert(93%) sepia(17%) saturate(864%)
    hue-rotate(104deg) brightness(95%) contrast(86%);
}
.chat-date {
  display: flex;
  width: 100%;
  align-items: center;
}
.timeblock {
  height: 24px;
  width: 116px;
  display: block;
  background-color: #8be3d9;
  position: relative;
  padding: 0.1rem;
  color: #164d61;
  z-index: 10;
  border-radius: 12px;
  text-align: center;
}
.timeblock::before {
  content: "";
  position: absolute;
  width: 70px;
  height: 0;
  left: -70px;
  top: 0.5rem;
  z-index: -1;

  border: 1px solid #cff4f5;
}
.timeblock::after {
  content: "";
  position: absolute;
  width: 70px;
  height: 0;
  right: -70px;
  top: 0.5rem;

  border: 1px solid #cff4f5;
  z-index: -1;
}
::-webkit-scrollbar-track {
  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
  border-radius: 10px;
  background-color: transparent !important;
}

::-webkit-scrollbar-thumb {
  border-radius: 10px;
  min-height: 5px !important;
  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
  background-color: #164d61;
}

::-webkit-scrollbar {
  width: 6px;
  background-color: #164d61;
}

::-webkit-scrollbar-thumb {
  border-radius: 10px;
  -webkit-box-shadow: inset 0 0 6px #164d61;
  background-color: transparent;
}
.message_time {
  font-size: 0.6rem;
}

.chat_send_icon {
  height: 2rem;
  width: 2rem;
  border-radius: 50%;
  background-color: #edeff5;
  display: flex;
  justify-content: center;
  align-items: center;
  margin-left: 0.4rem;
}
.scroll-button {
  position: fixed;
  bottom: 150px;
  right: 20px;
  background-color: #3bcbc4;
  color: #164d61;
  border: none;
  font-size: 0.7rem;
  font-family: "Rubik";
  padding: 2px 5px;
  border-radius: 20px;
  cursor: pointer;
  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
  transition: opacity 0.3s ease-in-out;
}

.scroll-button:hover {
  background-color: #41eee1;
}
.delete-img {
  width: 1rem;
  height: 1rem;
}
.message_lower_panel {
  display: flex;
  align-items: center;
  width: 100%;
  justify-content: space-between;
}
.chat-edit-panel {
  background-color: #cff4f5;
  border-radius: 5px;
  width: 100%;
}
.chat-edit-panel textarea {
  width: 100%;
  height: 100%;
  border: none;
  background-color: #cff4f5;
  border-radius: 5px;
}
.edit-status-img {
  width: 1.2rem;
  height: 1.2rem;
  cursor: pointer;
}

.edit-actions {
  width: 100%;
  display: flex;
  justify-content: flex-end;
}
.callIcon.disabled {
  opacity: 0.5;
  pointer-events: none;
  cursor: not-allowed;
}

